--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# These individuals contributed to the hbnb project in this repository 
+# These individuals contributed to the  Airbnb project in this repository 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
+Kingsley Daniel <stepupitsreal@gmail.com>
 Justin Majetich <justinmajetich@gmail.com>
